cabal-version:      3.4
name:               advent2024
version:            0.1.0.0
synopsis:           Advent of code 2024
-- description:
license:            MIT
license-file:       LICENSE
author:             Patrick Herrmann
maintainer:         patrickwherrmann@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable advent2024
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   app
    default-language: GHC2021
